Update server_documentation.md